lanecwe-Prod/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>BA_Assigned__c</fullName>
        <label>BA Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>Jennifer Clark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipa Janardanan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Morgan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Perkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Santy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Purifoy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Sponsor_Name__c</fullName>
        <label>Business Sponsor Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Requirements_Gathering_Hours__c</fullName>
        <label>Est. Requirements Gathering Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Sales_Ops_Requirement_Hours__c</fullName>
        <description>Includes Meetings, Research, etc.</description>
        <label>Est. Sales Ops Requirement Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Sys_Admin_Hours__c</fullName>
        <label>Est. Sys Admin Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Time_to_ROI__c</fullName>
        <description>Initial Estimate of total time after project completed that we would see a Positive Return based on the $$$/Time dedicated to completing the project.</description>
        <label>x-Est. Time to ROI +</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13-24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 24 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Total_Development_Hours__c</fullName>
        <label>Est. Total Development Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Total_Project_Hours__c</fullName>
        <formula>Est_Requirements_Gathering_Hours__c +
 Est_Sales_Ops_Requirement_Hours__c + Est_Total_Development_Hours__c  + Est_Training_Documentaton_Hours__c + Est_Sys_Admin_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Total Project Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Training_Documentaton_Hours__c</fullName>
        <label>Est. Training/Documentaton Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Approval_by_Business_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Approval by Business Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_IT_Top_10_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shows the current Top 10 Priority Projects</inlineHelpText>
        <label>Global IT Top 10 Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Priority__c</fullName>
        <description>text version that Margot needed</description>
        <label>Impact Priority</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Org__c</fullName>
        <label>Impacted Org</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Group__c</fullName>
        <label>Initiating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Global IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOE_Certainty__c</fullName>
        <description>Shows certain on hour estimates for the project.</description>
        <label>LOE Certainty</label>
        <picklist>
            <picklistValues>
                <fullName>110% +/-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125% +/-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150% +/-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Parent/Master Project that this Project rolls up to.</inlineHelpText>
        <label>Master Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sub-Projects</relationshipLabel>
        <relationshipName>Sub_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Action__c</fullName>
        <inlineHelpText>What action is happening next on this project.  For example, requirements meeting.  Convert BRD to TRD.  Business Owner Sign-off, etc.</inlineHelpText>
        <label>Next Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cases__c</fullName>
        <label>Number of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Cases__c</fullName>
        <label>Number of Closed Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Committee_Roadmap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>x-On Committee Roadmap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Level_of_Effort__c</fullName>
        <label>Overall Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PID_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>x-PID Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Order__c</fullName>
        <label>Priority Order</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Order_sort__c</fullName>
        <formula>IF( Priority_Order__c &lt; 1, 999, Priority_Order__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Order (sort)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <displayFormat>Project-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Unique External ID for this project record.</inlineHelpText>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <inlineHelpText>To enter a new note to an existing one: Click in the far left of the text box.  Enter Notes and save.</inlineHelpText>
        <label>Project Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Priority__c</fullName>
        <label>Project Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Roadmap_ID__c</fullName>
        <label>Project Roadmap ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Review for Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started/Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizing Project for Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending BRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Discussions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review by Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewing BRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Acceptance Testing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>x-Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Release_Month__c</fullName>
        <label>Projected Release Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirements_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requirements Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_18_ID__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Top_10_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Ops Top 10 Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <inlineHelpText>Sales Ops Score for this project</inlineHelpText>
        <label>Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Business_Sponsor__c</fullName>
        <label>x-Secondary Business Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>x-Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Steering_Committee_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when a project has been approved by steering committee*  *Only applies to Large Projects</inlineHelpText>
        <label>x-Steering Committee Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Steps_to_closure__c</fullName>
        <label>x-Temp-Steps to closure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_10_Priority_Type__c</fullName>
        <formula>IF(
 ISPICKVAL(Project_Status__c, &quot;Deployed to Production&quot;), &quot;&quot;,
IF(
 Global_IT_Top_10_Priority__c = True &amp;&amp;  Sales_Ops_Top_10_Priority__c = True, &quot;IT/Ops Top Priority&quot;, 
IF(
Global_IT_Top_10_Priority__c = True, &quot;Global IT Top Priority&quot;,
IF(
Sales_Ops_Top_10_Priority__c = True, &quot;Sales Ops Top Priority&quot;, 
IF(
 Global_IT_Top_10_Priority__c = False &amp;&amp;  Sales_Ops_Top_10_Priority__c = False, &quot;Not Top 10&quot;, &quot;Error in Formula&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows a combined value for reporting purposes of what the top priorities of open projects are.</inlineHelpText>
        <label>Top 10 Priority Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_to_Business__c</fullName>
        <label>Value to Business</label>
        <type>TextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Deployed_Completed_Projects</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Est_Total_Development_Hours__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Number_of_Cases__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Deployed to Production</value>
        </filters>
        <label>All Deployed (Completed) Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Projects</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Master_Project__c</columns>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Priority_Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Score__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Projected_Release_Month__c</columns>
        <columns>Impacted_Org__c</columns>
        <columns>Impact_Priority__c</columns>
        <columns>Number_of_Closed_Cases__c</columns>
        <columns>Business_Sponsor_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Deployed to Production,IT Review for Update</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected by Business Owner,Master Project,Organizing Project for Cases</value>
        </filters>
        <label>All Open Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_Lite_APAC</group>
            <group>Admin_Lite_EMEA</group>
            <group>Admin_Lite_NA</group>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Projects_Not_Release_Maint</fullName>
        <columns>SFDC_18_ID__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Initiating_Group__c</columns>
        <columns>Est_Total_Development_Hours__c</columns>
        <columns>Est_Requirements_Gathering_Hours__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Top_10_Priority_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed to Production,Cancelled</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>maintenance,release,CRM Team</value>
        </filters>
        <filters>
            <field>Number_of_Cases__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Open Projects (Not Release/Maint. )</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Preliminary_Discussions_Projects</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Est_Total_Development_Hours__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Number_of_Cases__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Preliminary Discussions</value>
        </filters>
        <label>All Preliminary Discussions Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Projects_with_PID</fullName>
        <columns>SFDC_18_ID__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Initiating_Group__c</columns>
        <columns>Est_Total_Development_Hours__c</columns>
        <columns>Est_Requirements_Gathering_Hours__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Top_10_Priority_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed to Production,Cancelled</value>
        </filters>
        <filters>
            <field>PID_Uploaded__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Open Projects with PIDs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Release_Maint_Projects</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Est_Total_Development_Hours__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Number_of_Cases__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed to Production</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>maintenance,release,CRM Team</value>
        </filters>
        <label>All Release/Maint. Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Data_Governance_Projects</fullName>
        <columns>NAME</columns>
        <columns>Master_Project__c</columns>
        <columns>Impact_Priority__c</columns>
        <columns>Score__c</columns>
        <columns>Value_to_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Project__c</field>
            <operation>equals</operation>
            <value>Data Governance</value>
        </filters>
        <label>Data Governance Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_Lite_NA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Review</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Number_of_Closed_Cases__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>IT Review for Update</value>
        </filters>
        <label>IT Review for Updates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Master_Organizing_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Master Project,Organizing Project for Cases</value>
        </filters>
        <label>Master &amp; Organizing Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_Lite_APAC</group>
            <group>Admin_Lite_EMEA</group>
            <group>Admin_Lite_NA</group>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_for_case_assignment</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Master_Project__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Value_to_Business__c</columns>
        <columns>Impact_Priority__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Score__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Region__c</columns>
        <columns>Overall_Level_of_Effort__c</columns>
        <columns>Impacted_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Impact_Priority__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Projects for Case assignment</label>
        <language>en_US</language>
        <sharedTo>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>THIS_MONTH_S_PROJECTS</fullName>
        <columns>SFDC_18_ID__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Initiating_Group__c</columns>
        <columns>Est_Total_Development_Hours__c</columns>
        <columns>Est_Requirements_Gathering_Hours__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Top_10_Priority_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed to Production,Preliminary Discussions,Cancelled</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>maintenance,release</value>
        </filters>
        <filters>
            <field>Project_End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>THIS MONTH&apos;S PROJECTS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>THIS_NEXT_MONTH_S_PROJECTS</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>Project_ID__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Projected_Release_Month__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Initiating_Group__c</columns>
        <columns>Est_Total_Development_Hours__c</columns>
        <columns>Est_Requirements_Gathering_Hours__c</columns>
        <columns>Next_Action__c</columns>
        <columns>Number_of_Cases__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH,NEXT_MONTH</value>
        </filters>
        <filters>
            <field>Projected_Release_Month__c</field>
            <operation>equals</operation>
            <value>October,November</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed to Production</value>
        </filters>
        <label>THIS/LAST MONTH&apos;S PROJECTS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>z_Admin_Misc</fullName>
        <columns>SFDC_18_ID__c</columns>
        <columns>Project_ID__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Number_of_Closed_Cases__c</columns>
        <columns>Temp_Steps_to_closure__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Deployed to Production,Cancelled</value>
        </filters>
        <label>z-Admin-Misc</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Case_00Na000000ATF9vEAH</fullName>
        <active>true</active>
        <field>Case.Project__c</field>
        <filterItems>
            <field>Project__c.Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Rejected, Rejected by Business Owner</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Case_Project</name>
    </namedFilters>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_relate_to_a_M_Project_with_Master</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
ISBLANK(Master_Project__r.Master_Project__c)
)</errorConditionFormula>
        <errorDisplayField>Master_Project__c</errorDisplayField>
        <errorMessage>A Master Project cannot have a Master Project already.  Please search for a Project that doesn&apos;t have this relationship.</errorMessage>
    </validationRules>
</CustomObject>